# xmltv

./: Cargo.toml  README.md
src/: lib.rs  xmltv.rs  xmltv_channel.rs  xmltv_channel_display_name.rs  xmltv_error.rs  xmltv_program.rs
src/channels/: mod.rs  xmltv_channel.rs  xmltv_channel_display_name.rs
src/programs/: desc.rs  mod.rs  sub_title.rs  title.rs  xmltv_program.rs
src/programs/models/: actor.rs  category.rs  country.rs  credits.rs  desc.rs  icon.rs  keyword.rs  language.rs  length.rs  mod.rs  orig_language.rs
tests/: tests.rs
